[suraj]added:swagger for documentation
