# fundooNotes_Backend/src/routes/user.route.js
@@ -6,18 +6,14 @@ import { userAuth } from '../middlewares/auth.middleware';
 const router = express.Router();
 
 //route to create a new user for registration
-router.post('/', newUserValidator, userController.UserRegistration);
-
-
-//route to login a user
-router.post('/login',userController.login);
-
-
-
+router.post('', newUserValidator, userController.UserRegistration);
 
 //route to get all users
 router.get('', userController.getAllUsers);
 
+
+//route to login a user
+router.post('/login',userController.login);
 
 
 //route to get a single user by their user id
